--- a/src/components/layout/header/style.css
+++ b/src/components/layout/header/style.css
@@ -3,5 +3,13 @@
   width: 1280px;
   height: 80px;
   margin: 0 auto;
-  background-color: #fc9b27;
+  background-color: #f6f6f6;
+  padding: 0 90px;
+  justify-content: space-between;
+  box-sizing: border-box;
+  align-items: center;
+  box-shadow:
+    0 10px 20px rgba(0, 0, 0, 0.04),
+    0 2px 6px rgba(0, 0, 0, 0.04),
+    0 0 1px rgba(0, 0, 0, 0.04);
 }
