--- a/src/components/ui/title/style.css
+++ b/src/components/ui/title/style.css
@@ -1,3 +1,7 @@
 .title {
   margin: 0;
+  font-size: 44px;
+  font-family: "Inter", "Arial", sans-serif;
+  font-weight: 700;
+  line-height: 51px;
 }
