--- a/src/components/layout/page-wrapper/style.css
+++ b/src/components/layout/page-wrapper/style.css
@@ -1,7 +1,7 @@
 .page-wrapper__main {
   width: 1280px;
   margin: 0 auto;
-  background-color: #dfecfe;
-  padding: 90px;
+  /*background-color: #dfecfe;*/
+  /*padding: 90px;*/
   box-sizing: border-box;
 }
