--- a/src/components/ui/title/style.css
+++ b/src/components/ui/title/style.css
@@ -1,7 +1,23 @@
 .title {
   margin: 0;
-  font-size: 44px;
+  padding: 0;
   font-family: "Inter", "Arial", sans-serif;
   font-weight: 700;
-  line-height: 51px;
+  line-height: 115%;
+}
+
+.title_big {
+  font-size: 44px;
+}
+
+.title_medium {
+  font-size: 36px;
+}
+
+.title_small {
+  font-size: 32px;
+}
+
+.title_extra_small {
+  font-size: 18px;
 }
