Add style to Footer

--- a/src/components/blocks/features-list/style.css
+++ b/src/components/blocks/features-list/style.css
@@ -1,6 +1,6 @@
 .features {
   min-height: 843px;
-  background-color: #f6f6f6;
+  background-color: #ffffff;
   padding: 90px;
   text-align: center;
 }
