--- a/src/components/layout/footer/style.css
+++ b/src/components/layout/footer/style.css
@@ -1,7 +1,14 @@
 .footer {
   width: 1280px;
-  height: 80px;
+  min-height: 80px;
   display: flex;
   margin: 0 auto;
-  background-color: #88aa4d;
+  background-color: #ffffff;
+  padding: 0 90px;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
