--- a/src/components/layout/footer/style.css
+++ b/src/components/layout/footer/style.css
@@ -9,6 +9,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  /*box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);*/
   border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
