Fix styles for pixel perfect design

--- a/src/components/layout/header/style.css
+++ b/src/components/layout/header/style.css
@@ -3,7 +3,7 @@
   width: 1280px;
   height: 80px;
   margin: 0 auto;
-  background-color: #f6f6f6;
+  background-color: #ffffff;
   padding: 0 90px;
   justify-content: space-between;
   box-sizing: border-box;
